--- a/gcb_abstract_poster/.gitignore
+++ b/gcb_abstract_poster/.gitignore
@@ -6,3 +6,11 @@ amyloid_ngram_abstr.aux
 amyloid_ngram_abstr.bbl
 amyloid_ngram_abstr.log
 amyloid_ngram_abstr.synctex.gz
+amyloid_poster-concordance.tex
+amyloid_poster.aux
+amyloid_poster.log
+amyloid_poster.nav
+amyloid_poster.out
+amyloid_poster.snm
+amyloid_poster.synctex.gz
+amyloid_poster.toc
