added clusterization scheme to poster

--- a/gcb_abstract_poster/.gitignore
+++ b/gcb_abstract_poster/.gitignore
@@ -15,3 +15,6 @@ amyloid_poster.snm
 amyloid_poster.synctex.gz
 amyloid_poster.toc
 figure
+gcb_abstract_posterMB1.zip
+amyloid_poster.bbl
+amyloid_poster.blg
